--- a/mjh-react-app-page/package.json
+++ b/mjh-react-app-page/package.json
@@ -10,10 +10,13 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
+    "homepage": "https://clearm.github.io/new2021/mjh-react-app-page",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.3.0"
   }
 }
